--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
 				<table>
 					<tr>
 						<td>
-							<b>Pontuação:</b>
+							<b>PONTOS:</b>
 						</td>
+						<td>
+						<b></b>
+						</td>
+
 					</tr>
 					<tr>
-						<td width="50"> Acertos:</td>
+						<td> Acertos:</td>
 						<td id="acertos"> 0 </td>
 					</tr>
 
